Fix Bug 1405533: Misaligned text on Channel Desktop Landing

--- a/media/css/firefox/channel.less
+++ b/media/css/firefox/channel.less
@@ -579,6 +579,7 @@ html[lang^="en"] {
         .open-sans;
         line-height: 1.3;
         margin-bottom: @baseLine;
+        text-align: center;
     }
 
     ul {
@@ -611,10 +612,6 @@ html[lang^="en"] {
         &.bugzilla,
         &.test-pilot {
             float: none;
-        }
-
-        h3 {
-            text-align: center;
         }
     }
 
